Fix paragraph alignment in section three

--- a/styles/partials/_part-three.scss
+++ b/styles/partials/_part-three.scss
@@ -55,19 +55,20 @@
         top: 11.5em;
         left: -1.5em;
 
-        p {
-          position: absolute;
-          color: #FFF;
-          background-color: #26262a;
-          top: 13em;
-          left: 25em;
-          min-width: 23em;
-          font-size: 90%;
-          @media (min-width: $extra-large-devices) {
-            top: 14em;
-            left: 27em;
-            font-size: 100%;
-          }
+      }
+
+      p {
+        position: absolute;
+        color: #FFF;
+        background-color: #26262a;
+        top: 13em;
+        left: 25em;
+        min-width: 23em;
+        font-size: 90%;
+        @media (min-width: $extra-large-devices) {
+          top: 16em;
+          left: 27em;
+          font-size: 100%;
         }
       }
     }
@@ -84,7 +85,7 @@
           background-color: #26262a;
           min-width: 33em;
           font-size: 90%;
-          top: 20em;
+          top: 19.5em;
           left: 12em;
         }
       }
